build(bench): 修正 bench_relu 可执行文件的库链接
- 将 target_link_libraries 中的 bench_gemm 修改为 bench_relu
- 确保 bench_relu 可执行文件正确链接所需的库文件

--- a/bench/cuDNN/Relu/CMakeLists.txt
+++ b/bench/cuDNN/Relu/CMakeLists.txt
@@ -38,7 +38,7 @@ add_executable(
 )
 
 # 链接库文件
-target_link_libraries(bench_gemm
+target_link_libraries(bench_relu
     ${CUDA_LIBRARIES}
     cublas
     cudart
