feat(cmake): Add TRSM JIT plugin source to CMake build configuration
- Included `trsm_jit_plugin.cu` in the JIT source files list within CMakeLists.txt to ensure proper compilation and linking of the TRSM JIT plugin.

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -34,6 +34,7 @@ set(JIT_SRC
     src/jit/global_jit_manager.cu
     src/jit/Blas/gemm_jit_plugin.cu
     src/jit/Blas/gemv_jit_plugin.cu
+    src/jit/Blas/trsm_jit_plugin.cu
     src/jit/Blas/blas_jit_plugin_manager.cu
 )
 
