--- a/test/JIT_test/CMakeLists.txt
+++ b/test/JIT_test/CMakeLists.txt
@@ -5,33 +5,39 @@ add_executable(test_jit_system test_jit_system.cpp)
 target_link_libraries(test_jit_system PRIVATE 
     cuop_jit 
     cuop_cublas 
-    Glog::glog
+    CUDA::cudart
+    CUDA::nvrtc
+    ${GLOG_LIBRARIES}
 )
+target_include_directories(test_jit_system PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 # JIT持久化缓存测试
 add_executable(test_persistent_cache test_persistent_cache.cpp)
 target_link_libraries(test_persistent_cache PRIVATE 
     cuop_jit 
     cuop_cublas 
-    Glog::glog
+    CUDA::cudart
+    CUDA::nvrtc
+    ${GLOG_LIBRARIES}
     z
     crypto
 )
-
-# 设置测试属性
-set_tests_properties(test_jit_system PROPERTIES
-    TIMEOUT 300
-    ENVIRONMENT "CUDA_VISIBLE_DEVICES=0"
-)
-
-set_tests_properties(test_persistent_cache PROPERTIES
-    TIMEOUT 600
-    ENVIRONMENT "CUDA_VISIBLE_DEVICES=0"
-)
+target_include_directories(test_persistent_cache PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 # 添加测试
 add_test(NAME JIT_System_Test COMMAND test_jit_system)
 add_test(NAME JIT_Persistent_Cache_Test COMMAND test_persistent_cache)
+
+# 设置测试属性
+set_tests_properties(JIT_System_Test PROPERTIES
+    TIMEOUT 300
+    ENVIRONMENT "CUDA_VISIBLE_DEVICES=0"
+)
+
+set_tests_properties(JIT_Persistent_Cache_Test PROPERTIES
+    TIMEOUT 600
+    ENVIRONMENT "CUDA_VISIBLE_DEVICES=0"
+)
 
 # 安装测试程序
 install(TARGETS test_jit_system test_persistent_cache
