--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -101,10 +101,10 @@ set_target_properties(cuop_cublas PROPERTIES OUTPUT_NAME "cuop_cublas" LIBRARY_O
 
 # 深度学习算子库 (自定义CUDA实现，不依赖cuDNN库)
 add_library(cuop_cudnn SHARED ${SRC_CUDNN})
-target_link_libraries(cuop_dnn PRIVATE CUDA::cudart ${GLOG_LIBRARIES})
-target_include_directories(cuop_dnn PRIVATE ${CMAKE_SOURCE_DIR}/include)
-set_target_properties(cuop_dnn PROPERTIES OUTPUT_NAME "cuop_dnn" LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
-message(STATUS "Building cuop_dnn library with custom CUDA implementations")
+target_link_libraries(cuop_cudnn PRIVATE CUDA::cudart ${GLOG_LIBRARIES})
+target_include_directories(cuop_cudnn PRIVATE ${CMAKE_SOURCE_DIR}/include)
+set_target_properties(cuop_cudnn PROPERTIES OUTPUT_NAME "cuop_cudnn" LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
+message(STATUS "Building cuop_cudnn library with custom CUDA implementations")
 
 # ==================== 安装配置 ====================
 
@@ -114,7 +114,7 @@ if(NOT CMAKE_INSTALL_PREFIX)
 endif()
 
 # 安装动态库
-install(TARGETS cuop_cublas cuop_dnn cuop_jit cuop_performance
+install(TARGETS cuop_cublas cuop_cudnn cuop_jit cuop_performance
         EXPORT cuOPTargets
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
