新增多个BLAS JIT插件源文件，包括批量GEMM、对称矩阵运算、向量运算、TRMM和GER等，进一步扩展了BLAS JIT的功能支持。

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -62,6 +62,11 @@ set(JIT_SRC
     src/jit/Blas/gemm_jit_plugin.cu
     src/jit/Blas/gemv_jit_plugin.cu
     src/jit/Blas/trsm_jit_plugin.cu
+    src/jit/Blas/gemm_batched_jit_plugin.cu
+    src/jit/Blas/symm_herk_jit_plugin.cu
+    src/jit/Blas/vector_ops_jit_plugin.cu
+    src/jit/Blas/trmm_jit_plugin.cu
+    src/jit/Blas/ger_jit_plugin.cu
     src/jit/Blas/blas_jit_plugin_manager.cu
 )
 
