新增多个cuBlas基准测试，包括AXPY、COPY、DOT、SCAL、SYMM和TRSM，扩展了cuBlas的功能支持，提升了性能测试的全面性和灵活性。同时，更新了相应的CMake配置文件，确保与CUDA 12.8及compute_89架构的兼容性。

--- a/bench/cuBlas/gemm/CMakeLists.txt
+++ b/bench/cuBlas/gemm/CMakeLists.txt
@@ -33,8 +33,8 @@ include_directories(
 add_executable(
     bench_gemm
     bench_gemm.cpp
-    ${CMAKE_SOURCE_DIR}/../../../src/cuda_op/detail/cuBlas/gemm.cu
-    ${CMAKE_SOURCE_DIR}/../../../src/base/memory_pool.cu
+    ${CMAKE_SOURCE_DIR}/../src/cuda_op/detail/cuBlas/gemm.cu
+    ${CMAKE_SOURCE_DIR}/../src/base/memory_pool.cu
 )
 
 # 链接库文件
