新增cuDNN测试模块，包括平均池化、批归一化、层归一化、卷积、展平、最大池化和视图操作的CMake配置和单元测试，提升了CUDA算子的测试覆盖率和功能验证，确保了各个操作的正确性和性能。

--- a/test/cuDNN/test_batchnorm/CMakeLists.txt
+++ b/test/cuDNN/test_batchnorm/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(test_globalmaxpool2D LANGUAGES CXX CUDA)
+project(test_batchnorm LANGUAGES CXX CUDA)
 
 # Set CUDA architectures policy and target
 cmake_policy(SET CMP0104 NEW)
@@ -25,18 +25,18 @@ include_directories(
 
 # Add CUDA source files
 set(CUDA_SOURCES
-    ../../../../src/cuda_op/detail/cuDNN/globalmaxpool.cu
+    ../../../../src/cuda_op/detail/cuDNN/batchnorm.cu
     ../../../../src/base/memory_pool.cu
 )
 
 # Create executable with both C++ and CUDA sources
-add_executable(test_globalmaxpool2D 
-    test_globalmaxpool2D.cpp
+add_executable(test_batchnorm 
+    test_batchnorm.cpp
     ${CUDA_SOURCES}
 )
 
 # Link libraries
-target_link_libraries(test_globalmaxpool2D
+target_link_libraries(test_batchnorm
     ${CUDA_LIBRARIES}
     ${GTEST_BOTH_LIBRARIES}
     glog::glog
@@ -45,4 +45,4 @@ target_link_libraries(test_globalmaxpool2D
 )
 
 enable_testing()
-add_test(NAME test_globalmaxpool2D COMMAND test_globalmaxpool2D) 
+add_test(NAME test_batchnorm COMMAND test_batchnorm)
